# uni-project-file-indexer

./: .gitignore  LICENSE.txt  README.md  ci.sh  pyproject.toml
indexme/cli/: indexme.py  purgeme.py  searchme.py
indexme/db/: connection.py  file_model.py  file_ops.py  paths.py  stat.py
indexme/gui/: #main_window.glade#  clipboard.py  gtk.py  gui.py  main_window.glade  main_window.py  searchme_gui.py
tests/: test_cli.py  test_doctest.py  utils.py
