[tool.poetry]
name = "indexme"
version = "1.0.0"
description = "Index and search your files"
authors = ["Paweł Zmarzły <pawo2500@gmail.com>"]
license = "GPL-2.0-or-later"
repository = "https://github.com/pzmarzly/uni-file-indexer"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.29"
typer = "^0.4.0"
xdg = "^5.1.1"
PyGObject = { version = "^3.42.0", optional = true }
types-SQLAlchemy = "^1.4.4"
inotifyrecursive = "^0.3.5"

[tool.poetry.extras]
gui = ["PyGObject"]

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.9b0"
isort = "^5.10.1"
autoflake = "^1.4"
coverage = "^6.2"
pdoc3 = "^0.10.0"

[tool.poetry.scripts]
indexme = 'indexme.cli.indexme:app'
purgeme = 'indexme.cli.purgeme:app'
searchme = 'indexme.cli.searchme:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
