[tool.poetry]
name = "indexme"
version = "1.0.0"
description = "Index and search your files"
authors = ["Paweł Zmarzły <pawo2500@gmail.com>"]
license = "GPL-2.0-or-later"
repository = "https://github.com/pzmarzly/uni-project-file-indexer"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.29"
typer = "^0.4.0"
xdg = "^5.1.1"
types-SQLAlchemy = "^1.4.4"
inotifyrecursive = "^0.3.5"
PyGObject = { version = "^3.42.0", optional = true }
Send2Trash = { version = "^1.8.0", optional = true }

[tool.poetry.extras]
gui = ["PyGObject", "Send2Trash"]

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.9b0"
isort = "^5.10.1"
autoflake = "^1.4"
coverage = "^6.2"
pdoc3 = "^0.10.0"

[tool.poetry.scripts]
indexme = 'indexme.cli.indexme:app'
purgeme = 'indexme.cli.purgeme:app'
searchme = 'indexme.cli.searchme:app'
searchme-gui = 'indexme.gui.searchme_gui:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
